--- a/static/css/style.css
+++ b/static/css/style.css
@@ -471,7 +471,9 @@ pre {
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto; }
-
+.container-fluid .about .py-5{
+  color: #eceaf7;
+}
 .row {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -8149,10 +8151,10 @@ a {
   -webkit-transition: .3s all ease;
   -o-transition: .3s all ease;
   transition: .3s all ease;
-  color: #1089ff; }
+  color: #089188; }
   a:hover, a:focus {
     text-decoration: none;
-    color: #1089ff;
+    color: #089188;
     outline: none !important; }
 
 h1, h2, h3, h4, h5,
@@ -8162,7 +8164,7 @@ h1, h2, h3, h4, h5,
   font-weight: 400; }
 
 .text-primary {
-  color: #1089ff !important; }
+  color: #089188 !important; }
 
 .ftco-navbar-light {
   background: transparent !important;
@@ -8177,12 +8179,12 @@ h1, h2, h3, h4, h5,
       position: relative;
       top: 0; } }
   .ftco-navbar-light .navbar-brand {
-    color: #fff; }
+    color: #d2b570; }
     .ftco-navbar-light .navbar-brand span {
-      color: #01d28e; }
+      color: #089188; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-brand {
-        color: #fff; } }
+        color: #d2b570; } }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav {
       padding-bottom: 10px; } }
@@ -8192,20 +8194,20 @@ h1, h2, h3, h4, h5,
     padding-bottom: .9rem;
     padding-left: 20px;
     padding-right: 20px;
-    color: #fff;
+    color: #d2b570;
     font-weight: 400;
     opacity: 1 !important; }
     .ftco-navbar-light .navbar-nav > .nav-item > .nav-link:hover {
-      color: #01d28e; }
+      color: #089188; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light .navbar-nav > .nav-item > .nav-link {
         padding-left: 0;
         padding-right: 0;
         padding-bottom: 0;
-        color: #fff; } }
+        color: #d2b570; } }
   .ftco-navbar-light .navbar-nav > .nav-item .dropdown-menu {
     border: none;
-    background: #fff;
+    background: #d2b570;
     -webkit-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
     -moz-box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41);
     box-shadow: 0px 10px 34px -20px rgba(0, 0, 0, 0.41); }
@@ -8229,32 +8231,32 @@ h1, h2, h3, h4, h5,
         .ftco-navbar-light .navbar-nav > .nav-item.ftco-seperator:before {
           display: none; } }
   .ftco-navbar-light .navbar-nav > .nav-item.cta > a {
-    color: #fff;
-    border: 1px solid #1089ff;
+    color: #d2b570;
+    border: 1px solid #089188;
     padding-top: .5rem;
     padding-bottom: .5rem;
     padding-left: 18px;
     padding-right: 18px;
     margin-top: 4px;
-    background: #1089ff;
+    background: #089188;
     -webkit-border-radius: 2px;
     -moz-border-radius: 2px;
     -ms-border-radius: 2px;
     border-radius: 2px; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a span {
       display: inline-block;
-      color: #fff; }
+      color: #d2b570; }
     .ftco-navbar-light .navbar-nav > .nav-item.cta > a:hover {
-      background: #1089ff;
-      border: 1px solid #1089ff; }
+      background: #089188;
+      border: 1px solid #089188; }
   .ftco-navbar-light .navbar-nav > .nav-item.cta.cta-colored a {
-    border: 1px solid #01d28e;
-    background: #01d28e !important; }
+    border: 1px solid #089188;
+    background: #089188 !important; }
   .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-    color: #01d28e; }
+    color: #089188; }
   @media (max-width: 991.98px) {
     .ftco-navbar-light .navbar-nav > .nav-item.active > a {
-      color: #1089ff; } }
+      color: #089188; } }
   .ftco-navbar-light .navbar-toggler {
     border: none;
     color: rgba(255, 255, 255, 0.5) !important;
@@ -8265,7 +8267,7 @@ h1, h2, h3, h4, h5,
     letter-spacing: .1em; }
     .ftco-navbar-light .navbar-toggler:hover, .ftco-navbar-light .navbar-toggler:focus {
       text-decoration: none;
-      color: #1089ff;
+      color: #089188;
       outline: none !important; }
   .ftco-navbar-light.scrolled {
     position: fixed;
@@ -8282,10 +8284,10 @@ h1, h2, h3, h4, h5,
         padding-right: 0 !important;
         padding-bottom: 0 !important; } }
     .ftco-navbar-light.scrolled .nav-item.active > a {
-      color: #1089ff !important; }
+      color: #089188 !important; }
     .ftco-navbar-light.scrolled .nav-item.cta > a {
       color: #fff !important;
-      background: #1089ff;
+      background: #089188;
       border: none !important;
       padding-top: 0.5rem !important;
       padding-bottom: .5rem !important;
@@ -8300,7 +8302,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #fff !important; }
     .ftco-navbar-light.scrolled .nav-item.cta.cta-colored span {
-      border-color: #1089ff; }
+      border-color: #089188; }
     @media (max-width: 991.98px) {
       .ftco-navbar-light.scrolled .navbar-nav {
         background: none;
@@ -8321,7 +8323,7 @@ h1, h2, h3, h4, h5,
       padding-bottom: 0.9rem !important;
       color: #000000 !important; }
       .ftco-navbar-light.scrolled .nav-link.active {
-        color: #1089ff !important; }
+        color: #089188 !important; }
     .ftco-navbar-light.scrolled.awake {
       margin-top: 0px;
       -webkit-transition: .3s all ease-out;
@@ -8389,7 +8391,7 @@ h1, h2, h3, h4, h5,
   .slider-text .icon-wrap .icon {
     width: 70px;
     height: 70px;
-    background: #01d28e;
+    background: #089188;
     -webkit-border-radius: 50%;
     -moz-border-radius: 50%;
     -ms-border-radius: 50%;
@@ -8429,9 +8431,9 @@ h1, h2, h3, h4, h5,
       .slider-text .breadcrumbs span a {
         color: rgba(255, 255, 255, 0.7); }
         .slider-text .breadcrumbs span a:hover, .slider-text .breadcrumbs span a:focus {
-          color: #1089ff; }
+          color: #089188; }
           .slider-text .breadcrumbs span a:hover i, .slider-text .breadcrumbs span a:focus i {
-            color: #1089ff; }
+            color: #089188; }
   .slider-text .bread {
     font-weight: 400 !important;
     position: relative;
@@ -8530,7 +8532,7 @@ h1, h2, h3, h4, h5,
       -ms-transform: translateY(-50%);
       transform: translateY(-50%);
       margin-top: -10px;
-      color: #1089ff !important;
+      color: #089188 !important;
       -moz-transition: all 0.7s ease;
       -o-transition: all 0.7s ease;
       -webkit-transition: all 0.7s ease;
@@ -8600,7 +8602,7 @@ h1, h2, h3, h4, h5,
   background: #f8f9fa !important; }
 
 .bg-primary {
-  background: #1089ff; }
+  background: #089188; }
 
 .btn {
   cursor: pointer;
@@ -8614,36 +8616,36 @@ h1, h2, h3, h4, h5,
   .btn:hover, .btn:active, .btn:focus {
     outline: none; }
   .btn.btn-primary {
-    background: #1089ff !important;
-    border: 1px solid #1089ff !important;
+    background: #089188 !important;
+    border: 1px solid #089188 !important;
     color: #fff !important; }
     .btn.btn-primary:hover {
-      border: 1px solid #1089ff;
+      border: 1px solid #089188;
       background: transparent;
-      color: #1089ff; }
+      color: #089188; }
     .btn.btn-primary.btn-outline-primary {
-      border: 1px solid #1089ff;
+      border: 1px solid #089188;
       background: transparent;
-      color: #1089ff; }
+      color: #089188; }
       .btn.btn-primary.btn-outline-primary:hover {
         border: 1px solid transparent;
-        background: #1089ff;
+        background: #089188;
         color: #fff; }
   .btn.btn-secondary {
-    background: #01d28e !important;
-    border: 1px solid #01d28e !important;
+    background: #089188 !important;
+    border: 1px solid #089188 !important;
     color: #fff !important; }
     .btn.btn-secondary:hover {
-      border: 1px solid #01d28e;
+      border: 1px solid #089188;
       background: transparent;
-      color: #01d28e; }
+      color: #089188; }
     .btn.btn-secondary.btn-outline-secondary {
-      border: 1px solid #01d28e;
+      border: 1px solid #089188;
       background: transparent;
-      color: #01d28e; }
+      color: #089188; }
       .btn.btn-secondary.btn-outline-secondary:hover {
         border: 1px solid transparent;
-        background: #01d28e;
+        background: #089188;
         color: #fff; }
   .btn.btn-outline-white {
     border-color: rgba(255, 255, 255, 0.8);
@@ -8657,22 +8659,22 @@ h1, h2, h3, h4, h5,
     .btn.btn-outline-white:hover, .btn.btn-outline-white:focus, .btn.btn-outline-white:active {
       background: #fff;
       border-color: #fff;
-      color: #1089ff; }
+      color: #089188; }
   .btn.btn-black {
     background: #000000 !important;
     border: 1px solid #000000 !important;
     color: #fff !important; }
     .btn.btn-black:hover {
-      border: 1px solid #1089ff;
+      border: 1px solid #089188;
       background: transparent;
-      color: #1089ff; }
+      color: #089188; }
     .btn.btn-black.btn-outline-black {
       border: 1px solid #f0f0f0 !important;
       background: transparent !important;
       color: #000000 !important; }
       .btn.btn-black.btn-outline-black:hover {
-        border: 1px solid #1089ff !important;
-        background: #1089ff !important;
+        border: 1px solid #089188 !important;
+        background: #089188 !important;
         color: #fff !important; }
 
 .search-wrap-1 {
@@ -8697,7 +8699,7 @@ h1, h2, h3, h4, h5,
     border-top: none;
     padding: 20px 30px 30px; }
     .car-wrap .text .price {
-      color: #1089ff;
+      color: #089188;
       margin-bottom: 0;
       font-weight: 600; }
       .car-wrap .text .price span {
@@ -8720,7 +8722,7 @@ h1, h2, h3, h4, h5,
         width: 50%; }
 
 .ftco-car-details .services .media-body .icon span {
-  color: #1089ff; }
+  color: #089188; }
 
 .ftco-car-details .services .media-body .text h3 {
   font-size: 14px !important;
@@ -8752,7 +8754,7 @@ h1, h2, h3, h4, h5,
       margin-right: 2px;
       color: rgba(0, 0, 0, 0.4) !important; }
       .nav-pills li a.active {
-        color: #1089ff !important;
+        color: #089188 !important;
         background: transparent !important; }
 
 .pills {
@@ -8769,7 +8771,7 @@ h1, h2, h3, h4, h5,
         font-size: 20px;
         margin-right: 15px; }
       .pills .features li.check span {
-        color: #01d28e; }
+        color: #089188; }
       .pills .features li.remove span {
         color: red; }
   .pills .head {
@@ -8806,7 +8808,7 @@ h1, h2, h3, h4, h5,
           width: 49%;
           display: inline-block; }
         .pills .review .desc .star i {
-          color: #01d28e; }
+          color: #089188; }
         .pills .review .desc .star .reply {
           padding: 2px 10px;
           background: #f0f0f0;
@@ -8832,7 +8834,7 @@ h1, h2, h3, h4, h5,
         display: inline-block;
         color: #b3b3b3; }
         .pills .rating-wrap .star span i {
-          color: #1089ff; }
+          color: #089188; }
         .pills .rating-wrap .star span:first-child {
           width: 62%; }
         .pills .rating-wrap .star span:last-child {
@@ -8867,7 +8869,7 @@ h1, h2, h3, h4, h5,
           height: 0;
           border-style: solid;
           border-width: 10px 100px 0 100px;
-          border-color: #1089ff transparent transparent transparent;
+          border-color: #089188 transparent transparent transparent;
           margin: 0 auto;
           z-index: 1; }
       .table .thead-primary tr th.bg-black:after {
@@ -8886,7 +8888,7 @@ h1, h2, h3, h4, h5,
     .table tbody tr td.product-name h3 {
       font-size: 18px; }
     .table tbody tr td.product-name .rated span {
-      color: #01d28e; }
+      color: #089188; }
       .table tbody tr td.product-name .rated span:nth-child(1) {
         color: #000000; }
       .table tbody tr td.product-name .rated span:last-child {
@@ -8912,7 +8914,7 @@ h1, h2, h3, h4, h5,
           left: -10px;
           font-size: 14px; }
         .table tbody tr td.price h3 span.num {
-          color: #1089ff;
+          color: #089188;
           font-size: 20px;
           position: relative; }
         .table tbody tr td.price h3 span.per {
@@ -8938,7 +8940,7 @@ h1, h2, h3, h4, h5,
         .table tbody tr td.price .btn-custom a {
           padding: 7px 20px;
           display: inline-block;
-          background: #1089ff;
+          background: #089188;
           color: #fff;
           -webkit-border-radius: 5px;
           -moz-border-radius: 5px;
@@ -8954,7 +8956,7 @@ h1, h2, h3, h4, h5,
         -ms-transition: all 0.3s ease;
         transition: all 0.3s ease; }
       .table tbody tr td.price:hover.price {
-        background: #01d28e; }
+        background: #089188; }
       .table tbody tr td.price:hover .btn-custom {
         opacity: 1; }
       .table tbody tr td.price:hover .price-rate {
@@ -8969,7 +8971,7 @@ h1, h2, h3, h4, h5,
     right: 0;
     bottom: 0;
     content: '';
-    background: #01d28e;
+    background: #089188;
     z-index: -2;
     width: 63%; }
     @media (max-width: 767.98px) {
@@ -9000,7 +9002,7 @@ h1, h2, h3, h4, h5,
   margin-bottom: 20px; }
   .services .icon span {
     font-size: 40px;
-    color: #1089ff; }
+    color: #089188; }
 
 .services h3 {
   font-size: 17px;
@@ -9009,7 +9011,7 @@ h1, h2, h3, h4, h5,
 .services.services-2 .icon {
   width: 110px;
   height: 110px;
-  background: #1089ff;
+  background: #089188;
   border: none; }
   .services.services-2 .icon span {
     color: #fff; }
@@ -9030,7 +9032,7 @@ h1, h2, h3, h4, h5,
       width: 40%;
       content: '';
       opacity: 1;
-      background: #01d28e;
+      background: #089188;
       -ms-transform: rotate(20deg);
       /* IE 9 */
       -webkit-transform: rotate(20deg);
@@ -9054,7 +9056,7 @@ h1, h2, h3, h4, h5,
 
 .ftco-degree-bg {
   position: relative; }
-  .ftco-degree-bg:after {
+  /* .ftco-degree-bg:after {
     content: '';
     position: absolute;
     left: 0;
@@ -9068,7 +9070,7 @@ h1, h2, h3, h4, h5,
     -ms-transform: skewY(-4deg);
     -o-transform: skewY(-4deg);
     transform: skewY(-4deg);
-    background-color: #f8f9fa; }
+    background-color: #f8f9fa; } */
 
 .aside-stretch {
   background: #43a2ff; }
@@ -9114,7 +9116,7 @@ textarea.form-control {
   visibility: hidden; }
 
 .bg-primary {
-  background: #1089ff !important; }
+  background: #089188 !important; }
 
 .bg-black {
   background: #000000; }
@@ -9125,7 +9127,7 @@ textarea.form-control {
     font-weight: 500;
     font-size: 16px;
     margin-bottom: 0;
-    color: #1089ff; }
+    color: #089188; }
   .media-custom .media-body .position {
     font-size: 13px;
     color: #d9d9d9; }
@@ -9151,14 +9153,14 @@ textarea.form-control {
 
 .ftco-footer {
   font-size: 16px;
-  background: #000;
+  background: #089188;
   padding: 7em 0; }
   .ftco-footer .logo {
     text-transform: uppercase;
     font-weight: 700;
     color: #fff; }
     .ftco-footer .logo span {
-      color: #01d28e; }
+      color: #089188; }
   .ftco-footer .ftco-footer-widget h2 {
     font-weight: normal;
     color: #fff;
@@ -9214,12 +9216,12 @@ textarea.form-control {
   .footer-small-nav > li a {
     margin: 0 10px 10px 0; }
     .footer-small-nav > li a:hover, .footer-small-nav > li a:focus {
-      color: #1089ff; }
+      color: #089188; }
 
 .media .ftco-icon {
   width: 100px; }
   .media .ftco-icon span {
-    color: #1089ff; }
+    color: #089188; }
 
 .ftco-media {
   background: #fff;
@@ -9243,7 +9245,7 @@ textarea.form-control {
   .ftco-media .icon {
     font-size: 50px;
     display: block;
-    color: #1089ff; }
+    color: #089188; }
   .ftco-media.text-center .ftco-icon {
     margin: 0 auto; }
 
@@ -9287,7 +9289,7 @@ textarea.form-control {
   font-size: 18px;
   display: block;
   margin-bottom: 5px;
-  color: #1089ff;
+  color: #089188;
   font-size: 12px;
   font-weight: 600;
   letter-spacing: 2px;
@@ -9303,8 +9305,8 @@ textarea.form-control {
 .heading-section.heading-section-white .subheading {
   color: rgba(255, 255, 255, 0.9); }
 
-.heading-section.heading-section-white h2 {
-  font-size: 40px;
+.heading-section.heading-section-white h4 {
+  font-size: 20px;
   color: #fff; }
 
 .heading-section.heading-section-white p {
@@ -9379,7 +9381,7 @@ textarea.form-control {
       border-radius: 50%;
       background: rgba(0, 0, 0, 0.1); }
       .testimony-section .owl-dots .owl-dot.active {
-        background: #01d28e; }
+        background: #089188; }
 
 .testimony-wrap {
   display: block;
@@ -9402,7 +9404,7 @@ textarea.form-control {
     color: #000000; }
   .testimony-wrap .position {
     font-size: 16px;
-    color: #1089ff; }
+    color: #089188; }
 
 @media (max-width: 767.98px) {
   .about-image {
@@ -9457,14 +9459,14 @@ textarea.form-control {
     bottom: 0;
     content: '';
     opacity: 0;
-    background: #1089ff; }
+    background: #089188; }
     @media (min-width: 992px) {
       .ftco-counter .overlay {
         opacity: .3; } }
   .ftco-counter .text strong.number {
     font-weight: 300;
     font-size: 50px;
-    color: #1089ff; }
+    color: #089188; }
   .ftco-counter .text span {
     display: block;
     font-size: 18px;
@@ -9510,7 +9512,7 @@ textarea.form-control {
       .blog-entry .text .heading a {
         color: #000000; }
         .blog-entry .text .heading a:hover, .blog-entry .text .heading a:focus, .blog-entry .text .heading a:active {
-          color: #1089ff; }
+          color: #089188; }
   .blog-entry .meta > div {
     display: inline-block;
     margin-right: 5px;
@@ -9518,7 +9520,7 @@ textarea.form-control {
     font-size: 14px;
     font-weight: 500; }
     .blog-entry .meta > div a {
-      color: #1089ff; }
+      color: #089188; }
       .blog-entry .meta > div a:hover {
         color: #666666; }
   .blog-entry .btn-custom {
@@ -9556,7 +9558,7 @@ textarea.form-control {
     margin-bottom: 4px;
     font-weight: 400; }
     .block-27 ul li a, .block-27 ul li span {
-      color: #1089ff;
+      color: #089188;
       text-align: center;
       display: inline-block;
       width: 40px;
@@ -9565,7 +9567,7 @@ textarea.form-control {
       border-radius: 50%;
       border: 1px solid #e6e6e6; }
     .block-27 ul li.active a, .block-27 ul li.active span {
-      background: #1089ff;
+      background: #089188;
       color: #fff;
       border: 1px solid transparent; }
 
@@ -9585,7 +9587,7 @@ textarea.form-control {
   margin-top: 10px; }
   .contact-section .contact-info .icon span {
     font-size: 20px;
-    color: #1089ff; }
+    color: #089188; }
 
 @media (min-width: 992px) {
   .contact-section .contact-info .border-height {
@@ -9618,7 +9620,7 @@ textarea.form-control {
     .block-21 .text .heading a {
       color: #000000; }
       .block-21 .text .heading a:hover, .block-21 .text .heading a:active, .block-21 .text .heading a:focus {
-        color: #1089ff; }
+        color: #089188; }
   .block-21 .text .meta > div {
     display: inline-block;
     font-size: 12px;
@@ -9688,12 +9690,12 @@ textarea.form-control {
         text-transform: uppercase;
         font-size: 13px;
         letter-spacing: .1em;
-        color: #1089ff;
+        color: #089188;
         display: inline-block;
         margin-bottom: 20px; }
       .comment-list li .comment-body .reply {
         padding: 5px 10px;
-        background: #1089ff;
+        background: #089188;
         color: #fff;
         text-transform: uppercase;
         font-size: 11px;
