--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,62 +1,102 @@
- <footer class="ftco-footer ftco-bg-dark ftco-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2"><a href="#" class="logo">Beli<span>Park</span></a></h2>
-              <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-              <ul class="ftco-footer-social list-unstyled float-md-left float-lft mt-5">
-                <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-                <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4 ml-md-5">
-              <h2 class="ftco-heading-2">Information</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">About</a></li>
-                <li><a href="#" class="py-2 d-block">Services</a></li>
-                <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
-                <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
-                <li><a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-             <div class="ftco-footer-widget mb-4">
-              <h2 class="ftco-heading-2">Customer Support</h2>
-              <ul class="list-unstyled">
-                <li><a href="#" class="py-2 d-block">FAQ</a></li>
-                <li><a href="#" class="py-2 d-block">Payment Option</a></li>
-                <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
-                <li><a href="#" class="py-2 d-block">How it works</a></li>
-                <li><a href="#" class="py-2 d-block">Contact Us</a></li>
-              </ul>
-            </div>
-          </div>
-          <div class="col-md">
-            <div class="ftco-footer-widget mb-4">
-            	<h2 class="ftco-heading-2">Have a Questions?</h2>
-            	<div class="block-23 mb-3">
-	              <ul>
-	                <li><span class="icon icon-map-marker"></span><span class="text">City Office : 6, Alaska Tower, Ranibagh, Khandwa Road, Indore - 452020</span></li>
-	                <li><span class="icon icon-map-marker"></span><span class="text">Site Office : Badipura, NH-59, Betma Main Road.</span></li>
-	                <li><a href="#"><span class="icon icon-phone"></span><span class="text">9926028072</span></a></li>
-	                <li><a href="#"><span class="icon icon-envelope"></span><span class="text">grandbelipark2@gmail.com</span></a></li>
-	              </ul>
-	            </div>
-            </div>
-          </div>
+<footer class="ftco-footer ftco-bg-dark ftco-section">
+  <div class="container">
+    <div class="row mb-5">
+      <div class="col-md">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2">
+            <a href="#" class="logo">Beli<span>Park</span></a>
+          </h2>
+          <p>
+            Far far away, behind the word mountains, far from the countries
+            Vokalia and Consonantia, there live the blind texts.
+          </p>
+          <ul
+            class="ftco-footer-social list-unstyled float-md-left float-lft mt-5"
+          >
+            <li class="ftco-animate">
+              <a href="#"><span class="icon-twitter"></span></a>
+            </li>
+            <li class="ftco-animate">
+              <a href="#"><span class="icon-facebook"></span></a>
+            </li>
+            <li class="ftco-animate">
+              <a href="#"><span class="icon-instagram"></span></a>
+            </li>
+          </ul>
         </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-
-            <p><!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This website is made  by <a href="https://colorlib.com" target="_blank">Virtual Modify</a>
-  <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. --></p>
+      </div>
+      <div class="col-md">
+        <div class="ftco-footer-widget mb-4 ml-md-5">
+          <h2 class="ftco-heading-2">Information</h2>
+          <ul class="list-unstyled">
+            <li><a href="#" class="py-2 d-block">About</a></li>
+            <li><a href="#" class="py-2 d-block">Services</a></li>
+            <li><a href="#" class="py-2 d-block">Term and Conditions</a></li>
+            <li><a href="#" class="py-2 d-block">Best Price Guarantee</a></li>
+            <li>
+              <a href="#" class="py-2 d-block">Privacy &amp; Cookies Policy</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2">Customer Support</h2>
+          <ul class="list-unstyled">
+            <li><a href="#" class="py-2 d-block">FAQ</a></li>
+            <li><a href="#" class="py-2 d-block">Payment Option</a></li>
+            <li><a href="#" class="py-2 d-block">Booking Tips</a></li>
+            <li><a href="#" class="py-2 d-block">How it works</a></li>
+            <li><a href="#" class="py-2 d-block">Contact Us</a></li>
+          </ul>
+        </div>
+      </div>
+      <div class="col-md">
+        <div class="ftco-footer-widget mb-4">
+          <h2 class="ftco-heading-2">Have a Questions?</h2>
+          <div class="block-23 mb-3">
+            <ul>
+              <li>
+                <span class="icon icon-map-marker"></span
+                ><span class="text"
+                  >City Office : 6, Alaska Tower, Ranibagh, Khandwa Road, Indore
+                  - 452020</span
+                >
+              </li>
+              <li>
+                <span class="icon icon-map-marker"></span
+                ><span class="text"
+                  >Site Office : Badipura, NH-59, Betma Main Road.</span
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><span class="icon icon-phone"></span
+                  ><span class="text">9926028072</span></a
+                >
+              </li>
+              <li>
+                <a href="#"
+                  ><span class="icon icon-envelope"></span
+                  ><span class="text">grandbelipark2@gmail.com</span></a
+                >
+              </li>
+            </ul>
           </div>
         </div>
       </div>
-    </footer>
+    </div>
+    <div class="row">
+      <div class="col-md-12 text-center">
+        <p>
+          Copyright &copy;
+          <script>
+            document.write(new Date().getFullYear());
+          </script>
+          All rights reserved | This website is made by
+          <a href="https://colorlib.com" target="_blank">Virtual Modify</a>
+        </p>
+      </div>
+    </div>
+  </div>
+</footer>
