property and property detail ui

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,10 +1,11 @@
+{% load static %}
 <footer class="ftco-footer ftco-bg-dark ftco-section">
   <div class="container">
     <div class="row mb-5">
       <div class="col-md">
         <div class="ftco-footer-widget mb-4">
           <h2 class="ftco-heading-2">
-            <a href="#" class="logo">Beli<span>Park</span></a>
+            <img src="{% static 'images/logo.png' %}" alt=""  width="80px"/>
           </h2>
           <p>
             Far far away, behind the word mountains, far from the countries
@@ -72,13 +73,13 @@
               <li>
                 <a href="#"
                   ><span class="icon icon-phone"></span
-                  ><span class="text">9926028072</span></a
+                  ><span class="text">8889158884,8889158883</span></a
                 >
               </li>
               <li>
                 <a href="#"
                   ><span class="icon icon-envelope"></span
-                  ><span class="text">grandbelipark2@gmail.com</span></a
+                  ><span class="text"> nareshjaiswani0777@gmail.com</span></a
                 >
               </li>
             </ul>
@@ -94,7 +95,7 @@
             document.write(new Date().getFullYear());
           </script>
           All rights reserved | This website is made by
-          <a href="https://colorlib.com" target="_blank">Virtual Modify</a>
+          <a href="https://virtualmodify.in" target="_blank">Virtual Modify</a>
         </p>
       </div>
     </div>
