--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -1,14 +1,35 @@
 {% extends "index.html" %}
 {% load static %}
 {% block content %}
-
-<section class="hero-wrap hero-wrap-2 js-fullheight">
+{% include "includes/navbar.html" %} 
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="{% static 'images/sample_image.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/sample_image2.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="{% static 'images/sample_image3.jpg' %}" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+{% comment %} <section class="hero-wrap hero-wrap-2 js-fullheight">
 	{% comment %} <div class="hero-wrap ftco-degree-bg"> {% endcomment %}
 		{% comment %} <div class="overlay"></div> {% endcomment %}
-		<video autoplay muted loop poster="path/to/default-thumbnail.jpg" id="bg-video"
+		{% comment %} <video autoplay muted loop poster="path/to/default-thumbnail.jpg" id="bg-video"
 			style="width: 100%; height: 100%; object-fit: cover;">
 			<source src="{% static 'videos/Belipark video.mp4' %}" type="video/mp4">
-		</video>
+		</video> {% endcomment %}
 		{% comment %} <div class="container">
 			<div class="row no-gutters slider-text justify-content-start align-items-center justify-content-center">
 				<div class="col-lg-8 ftco-animate">
@@ -30,8 +51,8 @@
 			</div>
 		</div> {% endcomment %}
 		{% comment %}
-	</div> {% endcomment %}
-</section>
+	</div> 
+</section> {% endcomment %}
 <section class="ftco-section ftco-intro" style="background-color: #d2b570;">
 	<div class="overlay"></div>
 	<div class="container">
@@ -50,12 +71,12 @@
 	<div class="container py-5">
 		<div class="row g-5 align-items-center">
 			<div class="col-lg-5">
-				<img src="{% static 'images/alaskalogo.png' %}" class="img-fluid w-100 h-100" alt="">
+				<img src="{% static 'images/logo.png' %}" class="img-fluid w-100 h-100" alt="">
 			</div>
 			<div class="col-lg-7"
 				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
 				<h5 class="section-about-title pe-3">About Us</h5>
-				<h1 class="mb-4">Welcome to <span class="text-primary">BeliPark</span></h1>
+				<h1 class="mb-4">Welcome to <span class="text-primary">BhumiReality</span></h1>
 				<p class="mb-4">Alaska group is leading a team of the brightest minds in architecture,
 					G R O U P engineering and designing to develop the idea of township in a reality.</p>
 				<p class="mb-4">Revered as one of the most reliable real estate
@@ -137,9 +158,9 @@
 				<h2 class="mb-3">Our Services</h2>
 			</div>
 		</div>
-		<div class="row">
+		<div class="row h-100">
 			<div class="col-md-3 col-sm-6 mb-5">
-				<div class="services services-2 w-100 text-center">
+				<div class="services services-2 w-100 h-100 text-center" style="height:110%">
 					<div class="icon d-flex align-items-center justify-content-center  services-shadow-hover"><span
 							class="flaticon-wedding-car"></span></div>
 					<div class="text w-100 ">
@@ -251,13 +272,63 @@
 </section>
 <!-- End callto Area --> {% endcomment %}
 
+<div class="container-fluid about">
+	<div class="container py-5">
+					<div class="row justify-content-center">
+			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
+				<h2 class="mb-2">Properties</h2>
+			</div>
+		</div>
+		<div class="row g-5 align-items-center">
+			<div class="col-lg-5">
+				<img src="{% static 'images/realestate.jpg' %}" class="img-fluid w-100 h-100" alt="">
+			</div>
+			<div class="col-lg-7"
+				style="background: linear-gradient(rgba(255, 255, 255, .8), rgba(255, 255, 255, .8));">
+				<h1 class="mb-4">Laxima</h1>
+				<p class="mb-2">Alaska group is leading a team of the brightest minds in architecture,
+					G R O U P engineering and designing to develop the idea of township in a reality.</p>
+				<p class="mb-4">Revered as one of the most reliable real estate
+					developers in Madhya Pradesh, Alaska Group
+					was incepted in 2006 with the intention of
+					dramatically transforming the real estate
+					city.</p>
+				<a class="btn btn-primary rounded-pill py-3 px-5 mt-2 read-btn" href="">Learn More</a>
+			</div>
+		</div>
+
+			<div class="row justify-content-between g-5 mt-5">
+				<div class="col-sm mb-3">
+				<div class="card" style="width: 12rem;">
+					<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
+					</div>
+				</div>
+				<div class="col-sm mb-3">
+				<div class="card" style="width: 12rem;">
+				<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
+				</div>
+				</div>
+				<div class="col-sm mb-3">
+				<div class="card" style="width: 12rem;">
+					<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
+					</div>
+				</div>
+				<div class="col-sm mb-3 ">
+				<div class="card" style="width: 12rem;">
+					<img src="{% static 'images/realestate.jpg' %}" class="card-img-top" alt="...">
+					</div>
+				</div>
+			</div>
+	</div>
+</div>
+
 
 <section class="ftco-section ftco-no-pt bg-light">
 	<div class="container ">
 		<div class="row justify-content-center">
 			<div class="col-md-12 heading-section text-center ftco-animate mb-5">
 				<span class="subheading mt-5">What we offer</span>
-				<h2 class="mb-2">Features</h2>
+				<h2 class="mb-2">Amenities</h2>
 			</div>
 		</div>
 		<div class="row">
