--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,10 +1,11 @@
 <!-- Nav Starts -->
+{% load static %}
 <nav
   class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light"
   id="ftco-navbar"
 >
   <div class="container">
-    <a class="navbar-brand" href="index.html">Beli<span>Park</span></a>
+    <img src="{% static 'images/logo.png' %}" alt=""  width="80px"/>
     <button
       class="navbar-toggler"
       type="button"
@@ -19,12 +20,12 @@
 
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item active"><a href="#" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Services</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Blog</a></li>
-        <li class="nav-item"><a href="#" class="nav-link">Contact</a></li>
+        <li class="nav-item active"><a href="{% url 'home_view' %}" class="nav-link">Home</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="{% url 'property_list' %}" class="nav-link">Properties</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Pricing</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Blog</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Contact</a></li>
       </ul>
     </div>
   </div>
