--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -21,11 +21,11 @@
     <div class="collapse navbar-collapse" id="ftco-nav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active"><a href="{% url 'home_view' %}" class="nav-link">Home</a></li>
-        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">About</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">About US</a></li>
         <li class="nav-item"><a href="{% url 'property_list' %}" class="nav-link">Properties</a></li>
-        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Pricing</a></li>
-        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Blog</a></li>
-        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Contact</a></li>
+        {% comment %} <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Pricing</a></li>
+        <li class="nav-item"><a href="{% url 'home_view' %}" class="nav-link">Blog</a></li> {% endcomment %}
+        <li class="nav-item"><a href="#contact-us" class="nav-link">Contact US</a></li>
       </ul>
     </div>
   </div>
