--- a/templates/index.html
+++ b/templates/index.html
@@ -8,6 +8,7 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
     <link
       href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap"
