--- a/templates/home/home.html
+++ b/templates/home/home.html
@@ -5,13 +5,13 @@
 <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="{% static 'images/sample_image.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/thumbnail1.webp' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/sample_image2.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/thumbnail2.jpeg' %}" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item">
-      <img src="{% static 'images/sample_image3.jpg' %}" class="d-block w-100" alt="...">
+      <img src="{% static 'images/thumbnail3.jpeg' %}" class="d-block w-100" alt="...">
     </div>
   </div>
   <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
